MGS-1654 BUGFIX Altered nested lists spacing to fix APS pubs layouts.

--- a/src/scss/base/_base.lists.scss
+++ b/src/scss/base/_base.lists.scss
@@ -10,6 +10,10 @@ ul {
 
   li {
     margin: 0 0 14px 18px;
+
+    ul {
+      margin-top: 14px;
+    }
   }
 }
 
